[gd_scene load_steps=3 format=3 uid="uid://chq3s7vl3s5q6"]

[ext_resource type="Script" path="res:///scripts/chest_ui.gd" id="1_chest_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ChestUI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chest_ui")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sfx" type="AudioStreamPlayer" parent="CanvasLayer"]

[node name="Dimmer" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -170.0
offset_right = 240.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Math Chest Challenge"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ProblemLabel" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 80)
layout_mode = 2
text = "? + ? = ?"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 42

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
placeholder_text = "Enter a number..."
alignment = 1
caret_blink = true

[node name="SubmitButton" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Submit Answer"

[node name="FeedbackLabel" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Press ESC to cancel"
horizontal_alignment = 1
vertical_alignment = 1
